tests/ui/submit-nonconst.stderr
error[E0015]: cannot call non-const fn `Thing::new` in statics
  --> tests/ui/submit-nonconst.rs:11:20
   |
11 | inventory::submit!(Thing::new());
   |                    ^^^^^^^^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `Lazy::new(|| ...)` from the `once_cell` crate: https://crates.io/crates/once_cell
